--- a/Jira/Views/Home/Index.cshtml
+++ b/Jira/Views/Home/Index.cshtml
@@ -2,7 +2,60 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<form asp-controller="Project" asp-action="CreateNewProject" method="post"
+      class="bg-white/80 p-8 rounded-lg shadow-xl backdrop-blur-md w-full max-w-lg mx-4 sm:max-w-xl md:max-w-2xl">
+
+    <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Stworz nowy projekt</h2>
+
+    <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:flex-row sm:space-x-4 mb-6">
+        <div class="flex-1">
+            <label for="date-start" class="block text-gray-700 font-semibold mb-2">Nazwa</label>
+            <input type="text" name="name" id="name" required
+                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+        </div>
+
+        <div class="flex-1">
+            <label for="date-end" class="block text-gray-700 font-semibold mb-2">Opis</label>
+            <input type="text" name="description" id="description" required
+                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+        </div>
+
+        <div class="flex-1">
+            <label for="persons" class="block text-gray-700 font-semibold mb-2">Osoby</label>
+            <input type="text" name="password" id="passwortd" required 
+                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+        </div>
+    </div>
+
+    <button type="submit" 
+            id="submitButton" >
+        Dodaj
+    </button>
+</form>
+
+
+<form asp-controller="Project" asp-action="JoinAProject" method="post"
+      class="bg-white/80 p-8 rounded-lg shadow-xl backdrop-blur-md w-full max-w-lg mx-4 sm:max-w-xl md:max-w-2xl">
+
+    <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Dolacz do projektu</h2>
+
+    <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:flex-row sm:space-x-4 mb-6">
+        <div class="flex-1">
+            <label for="date-start" class="block text-gray-700 font-semibold mb-2">Nazwa</label>
+            <input type="text" name="name" id="name" required
+                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+        </div>
+
+        <div class="flex-1">
+            <label for="date-end" class="block text-gray-700 font-semibold mb-2">Haslo</label>
+            <input type="password" name="password" id="password" required
+                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+        </div>
+
+    </div>
+
+    <button type="submit"
+            id="submitButton2">
+        Dolacz
+    </button>
+</form>
