--- a/Jira/Views/Home/Index.cshtml
+++ b/Jira/Views/Home/Index.cshtml
@@ -1,6 +1,38 @@
-﻿@{
+﻿@model List<Jira.Models.Project>
+
+@{
     ViewData["Title"] = "Home Page";
 }
+
+@if (Model == null || !Model.Any()) // Sprawdzamy, czy lista jest pusta
+{
+    <div class="max-w-sm bg-white rounded-lg shadow-md p-6">
+        <h2 class="text-xl font-bold">Nie masz żadnych projektow</h2>
+    </div>
+}
+else
+{
+    @foreach (var project in Model)
+    {
+        <div class="max-w-sm bg-white rounded-lg shadow-md p-6">
+            <h2 class="text-xl font-bold">@project.Name</h2>
+            <p class="text-gray-600 mt-2">@project.Description</p>
+            <a asp-controller="Project" asp-action="GetUserTicketsInProject" asp-route-projectId="@project.Id">
+                Zadania w projekcie
+            </a>
+            <a asp-controller="Sprint" asp-action="GetTicketsFromSprint" asp-route-projectId="@project.Id">
+                Zadania w sprincie
+            </a>
+
+            <a asp-controller="Project" asp-action="ProjectDetailsPage" asp-route-projectId="@project.Id">
+                Szczegoly projektu
+            </a>
+        </div>
+    }
+}
+
+
+<a asp-controller="Ticket" asp-action="GetAllUserTickets">Zobacz swoje zadania</a>
 
 <form asp-controller="Project" asp-action="CreateNewProject" method="post"
       class="bg-white/80 p-8 rounded-lg shadow-xl backdrop-blur-md w-full max-w-lg mx-4 sm:max-w-xl md:max-w-2xl">
@@ -21,7 +53,7 @@
         </div>
 
         <div class="flex-1">
-            <label for="persons" class="block text-gray-700 font-semibold mb-2">Osoby</label>
+            <label for="persons" class="block text-gray-700 font-semibold mb-2">Haslo</label>
             <input type="text" name="password" id="passwortd" required 
                    class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
         </div>
