--- a/Jira/Views/Sprint/GetTicketsFromSprint.cshtml
+++ b/Jira/Views/Sprint/GetTicketsFromSprint.cshtml
@@ -3,7 +3,7 @@
 @if (Model == null || !Model.Any())
 {
     <div class="max-w-sm bg-white rounded-lg shadow-md p-6">
-        <h2 class="text-xl font-bold">Nie masz żadnych zadań w tym projekcie</h2>
+        <h2 class="text-xl font-bold">Nie masz żadnych zadań w tym sprincie</h2>
     </div>
 }
 else
