Protyp tablicy Kanban

--- a/Jira/Views/Sprint/GetSprintDetailsPage.cshtml
+++ b/Jira/Views/Sprint/GetSprintDetailsPage.cshtml
@@ -8,7 +8,7 @@
     @if (Model.SprintMasterId == (TempData["userId"] as string))
     {
         <form method="post" asp-action="CreateNewTicket" asp-controller="Ticket" class="bg-white/80 p-8 rounded-lg shadow-xl backdrop-blur-md w-full max-w-lg mx-4 sm:max-w-xl md:max-w-2xl">
-            <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Stwórz nowy sprint</h2>
+            <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Stwórz nowe zadanie</h2>
 
             <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:flex-row sm:space-x-4 mb-6">
                 <div class="flex-1">
