--- a/Jira/Views/Home/Index.cshtml
+++ b/Jira/Views/Home/Index.cshtml
@@ -74,7 +74,7 @@ else
     <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:flex-row sm:space-x-4 mb-6">
         <div class="flex-1">
             <label for="date-start" class="block text-gray-700 font-semibold mb-2">Nazwa</label>
-            <input type="text" name="name" id="name" required
+            <input type="text" name="projectName" id="projectName" required
                    class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
         </div>
 
