--- a/Jira/Views/Home/Index.cshtml
+++ b/Jira/Views/Home/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@model List<Jira.Models.Project>
 
-@{
-    ViewData["Title"] = "Home Page";
-}
 
 @if (Model == null || !Model.Any()) // Sprawdzamy, czy lista jest pusta
 {
@@ -12,82 +9,99 @@
 }
 else
 {
+    <h1 class="text-2xl md:text-4xl lg:text-5xl font-bold">Moje projekty</h1>
+    <hr />
+    <br />
+    <div class="flex flex-col md:flex-row md:space-x-6">
     @foreach (var project in Model)
     {
-        <div class="max-w-sm bg-white rounded-lg shadow-md p-6">
+       
+        <div class="max-w-sm bg-white border-2 rounded-lg shadow-md p-6">
             <h2 class="text-xl font-bold">@project.Name</h2>
             <p class="text-gray-600 mt-2">@project.Description</p>
-            <a asp-controller="Project" asp-action="GetUserTicketsInProject" asp-route-projectId="@project.Id">
+
+            <a asp-controller="Project" asp-action="GetUserTicketsInProject" asp-route-projectId="@project.Id"
+               class="block text-orange-500 hover:text-orange-700 font-medium">
                 Zadania w projekcie
             </a>
-            <a asp-controller="Sprint" asp-action="GetTicketsFromSprint" asp-route-projectId="@project.Id">
+
+            <a asp-controller="Sprint" asp-action="GetTicketsFromSprint" asp-route-projectId="@project.Id"
+               class="block text-orange-500 hover:text-orange-700 font-medium">
                 Zadania w sprincie
             </a>
 
-            <a asp-controller="Project" asp-action="ProjectDetailsPage" asp-route-projectId="@project.Id">
-                Szczegoly projektu
+            <a asp-controller="Project" asp-action="ProjectDetailsPage" asp-route-projectId="@project.Id"
+               class="block text-orange-500 hover:text-orange-700 font-medium">
+                Szczegóły projektu
             </a>
         </div>
-    }
+
+    }</div>
 }
 
+<br />
+<br />
+<h1 class="text-xl md:text-2xl lg:text-3xl font-bold my-4">Moje zadania w projektach</h1>
+<a asp-controller="Ticket" asp-action="GetAllUserTickets"
+   class="bg-orange-500 text-white px-4 py-2  my-2 rounded-md shadow-md hover:bg-orange-700 transition">
+    Zobacz swoje zadania
+</a>
+<br />
+<br />
 
-<a asp-controller="Ticket" asp-action="GetAllUserTickets">Zobacz swoje zadania</a>
+<div class="flex flex-col md:flex-row md:space-x-6">
+    <form asp-controller="Project" asp-action="CreateNewProject" method="post"
+          class="bg-white/80 p-8 rounded-lg shadow-xl backdrop-blur-md w-full max-w-lg mx-4 sm:max-w-xl md:max-w-2xl">
 
-<form asp-controller="Project" asp-action="CreateNewProject" method="post"
-      class="bg-white/80 p-8 rounded-lg shadow-xl backdrop-blur-md w-full max-w-lg mx-4 sm:max-w-xl md:max-w-2xl">
+        <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Stwórz nowy projekt</h2>
 
-    <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Stworz nowy projekt</h2>
+        <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:flex-row sm:space-x-4 mb-6">
+            <div class="flex-1">
+                <label for="name" class="block text-gray-700 font-semibold mb-2">Nazwa</label>
+                <input type="text" name="name" id="name" required
+                       class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+            </div>
 
-    <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:flex-row sm:space-x-4 mb-6">
-        <div class="flex-1">
-            <label for="date-start" class="block text-gray-700 font-semibold mb-2">Nazwa</label>
-            <input type="text" name="name" id="name" required
-                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+            <div class="flex-1">
+                <label for="description" class="block text-gray-700 font-semibold mb-2">Opis</label>
+                <input type="text" name="description" id="description" required
+                       class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+            </div>
+
+            <div class="flex-1">
+                <label for="password" class="block text-gray-700 font-semibold mb-2">Hasło</label>
+                <input type="text" name="password" id="password" required
+                       class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+            </div>
         </div>
 
-        <div class="flex-1">
-            <label for="date-end" class="block text-gray-700 font-semibold mb-2">Opis</label>
-            <input type="text" name="description" id="description" required
-                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+        <button type="submit" class="bg-amber-600 text-white px-6 py-2 rounded-lg hover:bg-amber-700 transition">
+            Dodaj
+        </button>
+    </form>
+
+    <form asp-controller="Project" asp-action="JoinAProject" method="post"
+          class="bg-white/80 p-8 rounded-lg shadow-xl backdrop-blur-md w-full max-w-lg mx-4 sm:max-w-xl md:max-w-2xl">
+
+        <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Dołącz do projektu</h2>
+
+        <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:flex-row sm:space-x-4 mb-6">
+            <div class="flex-1">
+                <label for="projectName" class="block text-gray-700 font-semibold mb-2">Nazwa</label>
+                <input type="text" name="projectName" id="projectName" required
+                       class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+            </div>
+
+            <div class="flex-1">
+                <label for="password" class="block text-gray-700 font-semibold mb-2">Hasło</label>
+                <input type="password" name="password" id="password" required
+                       class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
+            </div>
         </div>
 
-        <div class="flex-1">
-            <label for="persons" class="block text-gray-700 font-semibold mb-2">Haslo</label>
-            <input type="text" name="password" id="passwortd" required 
-                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
-        </div>
-    </div>
-
-    <button type="submit" 
-            id="submitButton" >
-        Dodaj
-    </button>
-</form>
-
-
-<form asp-controller="Project" asp-action="JoinAProject" method="post"
-      class="bg-white/80 p-8 rounded-lg shadow-xl backdrop-blur-md w-full max-w-lg mx-4 sm:max-w-xl md:max-w-2xl">
-
-    <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Dolacz do projektu</h2>
-
-    <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:flex-row sm:space-x-4 mb-6">
-        <div class="flex-1">
-            <label for="date-start" class="block text-gray-700 font-semibold mb-2">Nazwa</label>
-            <input type="text" name="projectName" id="projectName" required
-                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
-        </div>
-
-        <div class="flex-1">
-            <label for="date-end" class="block text-gray-700 font-semibold mb-2">Haslo</label>
-            <input type="password" name="password" id="password" required
-                   class="bg-transparent border-2 border-gray-300 text-gray-700 outline-none px-4 py-2 rounded-md w-full focus:ring-2 focus:ring-amber-600 transition">
-        </div>
-
-    </div>
-
-    <button type="submit"
-            id="submitButton2">
-        Dolacz
-    </button>
-</form>
+        <button type="submit" class="bg-amber-600 text-white px-6 py-2 rounded-lg hover:bg-amber-700 transition">
+            Dołącz
+        </button>
+    </form>
+</div>
+<script src="https://cdn.tailwindcss.com"></script>
