--- a/Jira/Views/Project/GetUserTicketsInProject.cshtml
+++ b/Jira/Views/Project/GetUserTicketsInProject.cshtml
@@ -8,12 +8,19 @@
 	</div>
 }
 else{
-@foreach(var ticket in Model){
+    <div class="flex flex-col md:flex-row md:space-x-6">
+        @foreach (var ticket in Model)
+        {
 
-	<div class="max-w-sm bg-white rounded-lg shadow-md p-6">
-		<h2 class="text-xl font-bold">@ticket.Title</h2>
-		<p class="text-gray-600 mt-2">@ticket.Description</p>
-	</div>
+            <div class="max-w-sm bg-white border-2 rounded-lg shadow-md p-6">
+                <h2 class="text-xl font-bold">@ticket.Title</h2>
+                <p class="text-gray-600 mt-2">@ticket.Description</p>
 
+
+            </div>
+
+        }
+    </div>
 }
-}
+
+<script src="https://cdn.tailwindcss.com"></script>
