--- a/Jira/Views/Project/GetUserTicketsInProject.cshtml
+++ b/Jira/Views/Project/GetUserTicketsInProject.cshtml
@@ -1,25 +1,68 @@
-﻿
-@model List<Jira.Models.Ticket>
+﻿@model List<Jira.Models.Ticket>
 
-@if (Model == null || !Model.Any()){
-	<div class="max-w-sm bg-white rounded-lg shadow-md p-6">
-		<h2 class="text-xl font-bold">Nie masz zadnych zadan w tym projekcie</h2>
-		
-	</div>
+@if (Model == null || !Model.Any())
+{
+    <div class="max-w-sm bg-white rounded-lg shadow-md p-6">
+        <h2 class="text-xl font-bold">Nie masz żadnych zadań w tym projekcie</h2>
+    </div>
 }
-else{
-    <div class="flex flex-col md:flex-row md:space-x-6">
-        @foreach (var ticket in Model)
-        {
-
-            <div class="max-w-sm bg-white border-2 rounded-lg shadow-md p-6">
-                <h2 class="text-xl font-bold">@ticket.Title</h2>
-                <p class="text-gray-600 mt-2">@ticket.Description</p>
-
-
+else
+{
+    <div class="flex flex-col space-y-6">
+        <!-- Krytyczne zadania -->
+        <div>
+            <h1 class="text-xl md:text-2xl lg:text-3xl font-bold my-4">Krytyczne zadania</h1>
+            <div class="flex flex-wrap gap-4">
+                @foreach (var ticket in Model.Where(t => t.Priority == TicketPriority.Critical && !t.Status.Equals(TicketStatus.Done)))
+                {
+                    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 bg-white border-2 rounded-lg shadow-md p-6 border-red-500">
+                        <h2 class="text-xl font-bold">@ticket.Title</h2>
+                        <p class="text-gray-600 mt-2">@ticket.Description</p>
+                    </div>
+                }
             </div>
+        </div>
 
-        }
+        <!-- Ważne zadania -->
+        <div>
+            <h1 class="text-xl md:text-2xl lg:text-3xl font-bold my-4">Ważne zadania</h1>
+            <div class="flex flex-wrap gap-4">
+                @foreach (var ticket in Model.Where(t => t.Priority == TicketPriority.High && !t.Status.Equals(TicketStatus.Done)))
+                {
+                    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 bg-white border-2 rounded-lg shadow-md p-6">
+                        <h2 class="text-xl font-bold">@ticket.Title</h2>
+                        <p class="text-gray-600 mt-2">@ticket.Description</p>
+                    </div>
+                }
+            </div>
+        </div>
+
+        <!-- Zwykłe zadania -->
+        <div>
+            <h1 class="text-xl md:text-2xl lg:text-3xl font-bold my-4">Zwykłe zadania</h1>
+            <div class="flex flex-wrap gap-4">
+                @foreach (var ticket in Model.Where(t => t.Priority == TicketPriority.Medium && !t.Status.Equals(TicketStatus.Done)))
+                {
+                    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 bg-white border-2 rounded-lg shadow-md p-6">
+                        <h2 class="text-xl font-bold">@ticket.Title</h2>
+                        <p class="text-gray-600 mt-2">@ticket.Description</p>
+                    </div>
+                }
+            </div>
+        </div>
+        <!-- Low key zadania-->
+        <div>
+            <h1 class="text-xl md:text-2xl lg:text-3xl font-bold my-4">Zwykłe zadania</h1>
+            <div class="flex flex-wrap gap-4">
+                @foreach (var ticket in Model.Where(t => t.Priority == TicketPriority.Low && !t.Status.Equals(TicketStatus.Done)))
+                {
+                    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 bg-white border-2 rounded-lg shadow-md p-6">
+                        <h2 class="text-xl font-bold">@ticket.Title</h2>
+                        <p class="text-gray-600 mt-2">@ticket.Description</p>
+                    </div>
+                }
+            </div>
+        </div>
     </div>
 }
 
