--- a/Jira/Views/Sprint/GetSprintDetailsPage.cshtml
+++ b/Jira/Views/Sprint/GetSprintDetailsPage.cshtml
@@ -38,7 +38,31 @@
                         }
                     </div>
                 }
+                <div class="mb-6">
+                    <label class="block text-gray-700 font-semibold mb-2">Wybierz PRIORYTET:</label>
+                    
+                        <div class="flex items-center mb-2">
+                            <input type="radio" name="Priority" value="Critical" id="CriticalPriority" class="mr-2">
+                            <label for="Priority" class="text-gray-700">Krytyczny</label>
+                        </div>
 
+                    <div class="flex items-center mb-2">
+                        <input type="radio" name="Priority" value="High" id="CriticalPriority" class="mr-2">
+                        <label for="Priority" class="text-gray-700">Wysoki</label>
+                    </div>
+
+
+                    <div class="flex items-center mb-2">
+                        <input type="radio" name="Priority" value="Normal" id="CriticalPriority" class="mr-2">
+                        <label for="Priority" class="text-gray-700">Zwykly</label>
+                    </div>
+
+
+                    <div class="flex items-center mb-2">
+                        <input type="radio" name="Priority" value="Low" id="CriticalPriority" class="mr-2">
+                        <label for="Priority" class="text-gray-700">Niski</label>
+                    </div>
+                </div>
 
             <button type="submit" id="submitButton" class="bg-amber-600 text-white px-4 py-2 rounded-md shadow-md hover:bg-amber-700 transition">
                 Dodaj
