--- a/Jira/Views/Sprint/GetTicketsFromSprint.cshtml
+++ b/Jira/Views/Sprint/GetTicketsFromSprint.cshtml
@@ -23,10 +23,11 @@
         margin-bottom: 10px;
         border-radius: 3px;
         cursor: pointer;
-        width: 150px;
+        
         height: 60px;
         cursor: grab;
         transition: all 0.3s cubic-bezier(0.4, 0.0, 0.2, 1);
+            min-width: 250px;
         }
 
         .card:active {
@@ -43,6 +44,7 @@
         background: #2c2c2c;
         border: 2px solid #2c2c2c;
         transition: all 0.3s cubic-bezier(0.4, 0.0, 0.2, 1);
+        min-width: 300px;
         }
 
         .column.column-todo h2 {
@@ -96,6 +98,7 @@
                 {
                     <article class="card" draggable="true" ondragstart="drag(event)" data-id="@ticket.Id">
                         <h3>@ticket.Title</h3>
+                        <h4>@ticket.Assignee.UserName</h4>
                     </article>
                 }}
         </div>
@@ -107,6 +110,7 @@
                 {
                     <article class="card" draggable="true" ondragstart="drag(event)" data-id="@ticket.Id">
                         <h3>@ticket.Title</h3>
+                        <h4>@ticket.Assignee.UserName</h4>
                     </article>
                 } }
         </div>
@@ -118,6 +122,7 @@
                 {
                     <article class="card" draggable="true" ondragstart="drag(event)" data-id="@ticket.Id">
                         <h3>@ticket.Title</h3>
+                        <h4>@ticket.Assignee.UserName</h4>
                 </article>
                 }}
             </div>
