--- a/Jira/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Jira/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,17 +1,17 @@
 ﻿@page
 @model LoginModel
 
-@{
-    ViewData["Title"] = "Log in";
-}
+<div class="flex items-center justify-center ">
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
+
     <div class="col-md-4">
+       <div class="flex justify-center my-6">
+           <h1 class="font-bold text-3xl">Jira- zarządzaj swoimi projektami</h1>
+           </div>
         <section>
             <form id="account" method="post">
         
-                <hr />
+              
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Input.Password" class="form-label">Password</label>
+                    <label asp-for="Input.Password" class="form-label">Hasło</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="checkbox mb-3">
@@ -30,14 +30,12 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg bg-amber-500 hover:bg-amber-600">Zaloguj się</button>
                 </div>
                 <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                   
+                    <p class="flex items-center justify-center">
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Rejestracja</a>
                     </p>
                 
                 </div>
@@ -50,3 +48,5 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script src="https://cdn.tailwindcss.com"></script> 
