--- a/Jira/Views/Project/GetUserTicketsInProject.cshtml
+++ b/Jira/Views/Project/GetUserTicketsInProject.cshtml
@@ -18,6 +18,9 @@ else
                     <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 bg-white border-2 rounded-lg shadow-md p-6 border-red-500">
                         <h2 class="text-xl font-bold">@ticket.Title</h2>
                         <p class="text-gray-600 mt-2">@ticket.Description</p>
+                        <a asp-controller="Ticket" asp-action="GetTicketDetails" asp-route-ticketId="@ticket.Id">
+                            zobacz szczegóły
+                        </a>
                     </div>
                 }
             </div>
@@ -32,6 +35,9 @@ else
                     <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 bg-white border-2 rounded-lg shadow-md p-6">
                         <h2 class="text-xl font-bold">@ticket.Title</h2>
                         <p class="text-gray-600 mt-2">@ticket.Description</p>
+                        <a asp-controller="Ticket" asp-action="GetTicketDetails" asp-route-ticketId="@ticket.Id">
+                            zobacz szczegóły
+                        </a>
                     </div>
                 }
             </div>
@@ -46,6 +52,9 @@ else
                     <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 bg-white border-2 rounded-lg shadow-md p-6">
                         <h2 class="text-xl font-bold">@ticket.Title</h2>
                         <p class="text-gray-600 mt-2">@ticket.Description</p>
+                        <a asp-controller="Ticket" asp-action="GetTicketDetails" asp-route-ticketId="@ticket.Id">
+                            zobacz szczegóły
+                        </a>
                     </div>
                 }
             </div>
@@ -59,6 +68,9 @@ else
                     <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 bg-white border-2 rounded-lg shadow-md p-6">
                         <h2 class="text-xl font-bold">@ticket.Title</h2>
                         <p class="text-gray-600 mt-2">@ticket.Description</p>
+                        <a asp-controller="Ticket" asp-action="GetTicketDetails" asp-route-ticketId="@ticket.Id">
+                            zobacz szczegóły
+                        </a>
                     </div>
                 }
             </div>
