--- a/Jira/Views/Project/JoinAProject.cshtml
+++ b/Jira/Views/Project/JoinAProject.cshtml
@@ -1,6 +1,21 @@
 ﻿
+
+<div class="flex gap-4 justify-content-center ">
 @if(TempData["Error"]!=null){
-	<h1>@TempData["Error"]</h1>
+
+	<h1 class="font-bold text-4xl">@TempData["Error"]</h1>
+	<br />
+	<img src="/fonts/circle-xmark-solid.svg" alt="Opis SVG" width="100" height="100">
+
 }else{
-	<h1>Welcome to the Project</h1>
-}
+	<h1 class="font-bold text-4xl">Welcome to the Project</h1>
+	<img src="/fonts/circle-check-solid.svg" alt="Opis SVG" width="100" height="100">
+	}
+</div>
+
+<script>
+
+	setTimeout(function () {
+		window.location.href = '@Url.Action("Index", "Home")';
+	}, 3000);
+</script>
