--- a/Jira/Views/Sprint/GetTicketsFromSprint.cshtml
+++ b/Jira/Views/Sprint/GetTicketsFromSprint.cshtml
@@ -23,7 +23,7 @@
         margin-bottom: 10px;
         border-radius: 3px;
         cursor: pointer;
-        
+        color: white;
         height: 60px;
         cursor: grab;
         transition: all 0.3s cubic-bezier(0.4, 0.0, 0.2, 1);
@@ -98,7 +98,9 @@
                 {
                     <article class="card" draggable="true" ondragstart="drag(event)" data-id="@ticket.Id">
                         <h3>@ticket.Title</h3>
+
                         <h4>@ticket.Assignee.UserName</h4>
+                       
                     </article>
                 }}
         </div>
