--- a/Jira/Views/Home/Index.cshtml
+++ b/Jira/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Jira.Models.Project>
 
 
-@if (Model == null || !Model.Any()) // Sprawdzamy, czy lista jest pusta
+@if (Model == null || !Model.Any()) 
 {
   
 }
