--- a/Jira/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Jira/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,17 +1,10 @@
 ﻿@page
 @model LoginModel
 
-<div class="flex items-center justify-center ">
-
-
+<div class="flex items-center justify-center min-h-screen">
     <div class="col-md-4">
-       <div class="flex justify-center my-6">
-           <h1 class="font-bold text-3xl">Jira- zarządzaj swoimi projektami</h1>
-           </div>
-        <section>
+        <section class="bg-white p-6 rounded-lg shadow-md">
             <form id="account" method="post">
-        
-              
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
@@ -20,7 +13,7 @@
                 </div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Input.Password" class="form-label">Hasło</label>
+                    <label asp-for="Input.Password" class="form-label">Password</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="checkbox mb-3">
@@ -30,20 +23,19 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg bg-amber-500 hover:bg-amber-600">Zaloguj się</button>
+                    <button id="login-submit" type="submit" class="w-full btn btn-lg bg-amber-500 hover:bg-amber-600 text-white py-2 rounded-md">Log in</button>
                 </div>
-                <div>
-                   
-                    <p class="flex items-center justify-center">
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Rejestracja</a>
+                <div class="mt-3 text-center">
+                    
+                    <p>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
-                
                 </div>
             </form>
         </section>
     </div>
-   
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
