--- a/Jira/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Jira/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,11 +1,10 @@
 ﻿@page
 @model RegisterModel
 
-
-<div class="flex items-center justify-center ">
-    <div class="col-md-4">
+<div class="flex items-center justify-center min-h-screen bg-gray-100">
+    <div class="w-full max-w-md bg-white p-6 rounded-lg shadow-md">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-         
+
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
@@ -22,11 +21,8 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg bg-amber-500 hover:bg-amber-600">Register</button>
+            <button id="registerSubmit" type="submit" class="w-full btn btn-lg bg-amber-500 hover:bg-amber-600 text-white py-2 rounded-md">Register</button>
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-      
     </div>
 </div>
 
@@ -34,4 +30,4 @@
     <partial name="_ValidationScriptsPartial" />
 }
 
-<script src="https://cdn.tailwindcss.com"></script> 
+<script src="https://cdn.tailwindcss.com"></script>
